--- a/templates/gass_index.html
+++ b/templates/gass_index.html
@@ -43,9 +43,9 @@
     }
 </script>
 <body>
-    <button type="button" onclick="location.href='/graph/prev'" class="btn btn-outline-primary" style="width: 33%; height: 7%;">작년 요금</button>
-    <button type="button" onclick="location.href='/graph/now'" class="btn btn-outline-primary" style="width: 33%; height: 7%;">올해 요금</button>
-    <button type="button" onclick="location.href='/graph/both'" class="btn btn-primary" style="width: 32%; height: 7%;">작년 + 올해 요금</button>
+    <button type="button" onclick="location.href='/graph/prev'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">작년 요금</button>
+    <button type="button" onclick="location.href='/graph/now'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">올해 요금</button>
+    <button type="button" onclick="location.href='/graph/both'" class="btn btn-primary" style="width: 32%; height: 7%; font-size:150%">작년 + 올해 요금</button>
     <div style="padding: 10;"></div>
     <button type="button" onclick="location.href='main_page.html'" class="btn btn-outline-danger" style="width: 100%; height: 7%;">메인 화면 돌아가기</button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
