FIX: Remove misstype

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -21,7 +21,7 @@
 
     <div class="box">
         <button type="button" class="btm_image; float-right" id="img_btn">
-            <img src="{% static 'main/user (2)png'%}" height="50px">
+            <img src="{% static 'main/user.png'%}" height="50px">
         </button>
     </div>
 
@@ -57,7 +57,7 @@
 
     <div class="box">
         <button type="button" class="btm_image" id="img_btn">
-            <img src="{% static 'main/car.png'%}g" height="200px">
+            <img src="{% static 'main/car.png'%}" height="200px">
         </button>
         <p>
             주차
