FEAT: Add graph, main, login

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="box">
-        <button type="button" onclick="location.href='gass_index.html'" class="btm_image" id="img_btn">
+        <button type="button" onclick="location.href='graph/gas/both'" class="btm_image" id="img_btn">
             <img src="{% static 'main/yogum.png'%}" height="200px">
         </button>
         <p>
