--- a/templates/graph.html
+++ b/templates/graph.html
@@ -1,32 +1,28 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumBarunGothic@latest/nanumbarungothicsubset.css">
+    <style>
+        *{
+            font-family: 'NanumBarunGothic', sans-serif;
+        }
+    </style>
+    <h1 class="alert alert-primary" role="alert"  style="text-align:center; font-weight: bold">
+        가스 요금 차트
+    </h1>
+    <div style="padding: 70;"></div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+</head>
 <div id = 'container' style="width:100%;">
-    <canvas id="line-chart"></canvas>
+    <canvas id="line-chart" style="height:40vh; width:100vw"></canvas>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script>
     var config ={
         type: 'line',
-        data:{
-            datasets:[{
-                data: {{data|safe}}
-            }],
-            labels: {{labels|safe}}
-        },
+        data:{{chart_data|safe}},
         options:{
-            responsive: true
-        },
-        scales: {
-            x: {
-            display: true,
-            text: '년월'
-            },
-          y: {
-            display: true,
-            title: {
-              display: true,
-              text: 'Value'
-            }
-          }
+            responsive: false
         }
     };
 
@@ -35,3 +31,11 @@
         window.myLine = new Chart(ctx,config)
     }
 </script>
+<body>
+    <button type="button" onclick="location.href='/main/graph/gas/prev'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">작년 요금</button>
+    <button type="button" onclick="location.href='/main/graph/gas/now'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">올해 요금</button>
+    <button type="button" onclick="location.href='/main/graph/gas/both'" class="btn btn-primary" style="width: 32%; height: 7%; font-size:150%">작년 + 올해 요금</button>
+    <div style="padding: 10;"></div>
+    <button type="button" onclick="location.href='/main'" class="btn btn-outline-danger" style="width: 100%; height: 7%;">메인 화면 돌아가기</button>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</body>
