STYLE: Make change graph time button color

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
     <!-- pybo CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <title>Hello, pybo!</title>
+    <title>보금자리</title>
 </head>
 <body>
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
