--- a/templates/graph.html
+++ b/templates/graph.html
@@ -6,7 +6,7 @@
         }
     </style>
     <h1 class="alert alert-primary" role="alert"  style="text-align:center; font-weight: bold">
-        가스 요금 차트
+        {{graph_type}} 요금 차트
     </h1>
     <div style="padding: 70;"></div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -32,9 +32,20 @@
     }
 </script>
 <body>
-    <button type="button" onclick="location.href='/main/graph/gas/prev'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">작년 요금</button>
-    <button type="button" onclick="location.href='/main/graph/gas/now'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">올해 요금</button>
-    <button type="button" onclick="location.href='/main/graph/gas/both'" class="btn btn-primary" style="width: 32%; height: 7%; font-size:150%">작년 + 올해 요금</button>
+    {%if time == 'both' %}
+        <button type="button" onclick="location.href='/main/graph/gas/prev'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">작년 요금</button>
+        <button type="button" onclick="location.href='/main/graph/gas/now'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">올해 요금</button>
+        <button type="button" onclick="location.href='/main/graph/gas/both'" class="btn btn-primary" style="width: 32%; height: 7%; font-size:150%">작년 + 올해 요금</button>
+
+    {% elif time == 'now' %}
+        <button type="button" onclick="location.href='/main/graph/gas/prev'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">작년 요금</button>
+        <button type="button" onclick="location.href='/main/graph/gas/now'" class="btn btn-primary" style="width: 33%; height: 7%; font-size:150%">올해 요금</button>
+        <button type="button" onclick="location.href='/main/graph/gas/both'" class="btn btn-outline-primary" style="width: 32%; height: 7%; font-size:150%">작년 + 올해 요금</button>
+    {% elif time == 'prev' %}
+        <button type="button" onclick="location.href='/main/graph/gas/prev'" class="btn btn-primary" style="width: 33%; height: 7%; font-size:150%">작년 요금</button>
+        <button type="button" onclick="location.href='/main/graph/gas/now'" class="btn btn-outline-primary" style="width: 33%; height: 7%; font-size:150%">올해 요금</button>
+        <button type="button" onclick="location.href='/main/graph/gas/both'" class="btn btn-outline-primary" style="width: 32%; height: 7%; font-size:150%">작년 + 올해 요금</button>
+    {% endif %}
     <div style="padding: 10;"></div>
     <button type="button" onclick="location.href='/main'" class="btn btn-outline-danger" style="width: 100%; height: 7%;">메인 화면 돌아가기</button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
