Fix: Add missing part of main

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,14 @@
-{% extends "base.html" %}
-{% block content %}
+{% load static %}
+<!doctype html>
+<html lang="ko">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+    <title>보금자리</title>
+</head>
+<body>
 <div class="container my-3">
     <form method="post" action="{% url 'common:login' %}">
         {% csrf_token %}
@@ -17,4 +26,5 @@
         <button type="submit" class="btn btn-primary">로그인</button>
     </form>
 </div>
-{% endblock %}
+</body>
+</html>
