FEAT: Add comment function

--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
         </div>
 
         <div class="box">
-            <button type="button" class="btm_image" id="img_btn">
+            <button type="button" class="btm_image" id="img_btn" onclick="location.href='/main/board/list/1'">
                 <img  src="{% static 'main/sotong.png'%}"  height="200px">
             </button>
             <p>
