--- a/templates/list.html
+++ b/templates/list.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>공지사항</title>
+    <title>{{ board_type.name }}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'main/css.css'%}">
 </head>
 <body>
 <div class="board_wrap">
     <div class="board_title">
-        <strong>공지사항</strong>
-        <p>공지사항을 빠르고 정확하게 안내해드립니다.</p>
+        <strong>{{ board_type.name }}</strong>
+        <p>{{ board_type.description }}</p>
     </div>
     <div class="board_list_wrap">
         {% if board_list %}
@@ -26,7 +26,7 @@
             <div>
                 <div class="num">{{each.id}}</div>
                 <div class="title"><a href="/main/board/{{ each.id }}">{{ each.title }}</a></div>
-                <div class="writer">{{each.author.username}}</div>
+                <div class="writer">{{each.auther.username}}</div>
                 <div class="date">{{each.date}}</div>
             </div>
             {% endfor %}
@@ -47,7 +47,7 @@
             <a href="#" class="bt last">>></a>
         </div>
         <div class="bt_wrap">
-            <a href="write.html" class="on">등록</a>
+            <a href="/main/board/write/{{ board_type.id }}" class="on">등록</a>
             <!--<a href="#">수정</a>-->
         </div>
     </div>
