--- a/static/main/index.css
+++ b/static/main/index.css
@@ -108,7 +108,7 @@ footer {
     #main {
         display: grid;
         height: 700px;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
     }
 
