--- a/templates/security.html
+++ b/templates/security.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="contents">
-            {{todo.content}}
+            {{todo.contents}}
             
         </div>
 {% endfor %}
