--- a/templates/form_errors.html
+++ b/templates/form_errors.html
@@ -1,16 +1,14 @@
 {% if form.errors %}
 <div class="alert alert-danger">
     {% for field in form %}
-    <!-- 필드 오류 -->
-    {% if field.errors %}
+    {% for error in field.errors %}  <!-- 필드 오류를 출력한다. -->
     <div>
         <strong>{{ field.label }}</strong>
-        {{ field.errors }}
+        {{ error }}
     </div>
-    {% endif %}
     {% endfor %}
-    <!-- 넌필드 오류 -->
-    {% for error in form.non_field_errors %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}  <!-- 넌필드 오류를 출력한다. -->
     <div>
         <strong>{{ error }}</strong>
     </div>
