--- a/templates/login.html
+++ b/templates/login.html
@@ -1,59 +1,38 @@
-{% load static %}
 <!DOCTYPE html>
-<html lang="ko">
+<html lang = "ko">
 <head>
-
-    <title>Document</title>
+    {% load static %}
+    <title>보금자리</title>
+    <meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'main/login.css'%}">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 </head>
 <body>
-<h1>보금자리</h1>
-<form method="post" action="{% url 'common:login' %}">
-    {% if user.is_authenticated %}
-    <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} 로그아웃</a>
-    {% else %}
-    <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
-    {% endif %}
-    <div class="int-area">
-        <label for="username">아이디</label>
-        <input type="text" class="form-control" name="username" id="username"
-               value="{{ form.username.value|default_if_none:'' }}">
-
-    </div>
-    <div class="int-area">
-        <label for="password">비밀번호</label>
-        <input type="password" class="form-control" name="password" id="password"
-               value="{{ form.password.value|default_if_none:'' }}">
-    </div>
-    <div class="btn-area">
-        <button type="submit" class="btn btn-primary">로그인</button>
-    </div>
-</form>
-<div class="caption">
-    <a href="">비밀번호를 잊어버리셨나요?</a>
-</div>
-</section>
-
-<script>
-    let id = $('#id');
-    let pw = $('#pw');
-    let btn = $('#btn');
-
-    $(btn).on('click', function () {
-        if ($(id).val() == "") {
-            $(id).next('label').addClass('warning');
-            setTimeout(function () {
-                $('label').removeClass('warning');
-            }, 1500);
-
-        } else if ($(pw).val() == "") {
-            $(pw).next('label').addClass('warning');
-            setTimeout(function () {
-                $('label').removeClass('warning');
-            }, 1500);
-        }
-    });
-</script>
+        {% block content %}
+        <div class="lo">
+            <h1>보금자리</h1>
+            <form method="post" action="">
+                {% csrf_token %}
+                {% include "form_errors.html" %}
+                <div class="int-area">
+                    <label for="username">아이디</label>
+                    <input type="text" class="form-control" name="username" id="username"
+                    value="{{ form.username.value|default_if_none:'' }}">
+                </div>
+                <div class="int-area">
+                    <label for="password">비밀번호</label>
+                    <input type="password" class="form-control" name="password" id="password"
+                    value="{{ form.password.value|default_if_none:'' }}">
+                </div>
+                <div class="btn-area">
+                    <button type="submit" class="btn btn-primary">로그인</button>
+                </div>
+                <div class="caption">
+                    <a href="">비밀번호를 잊어버리셨나요?</a>
+                </div>
+            </form>
+        </div>
+        {% endblock %}
 </body>
 </html>
