--- a/templates/list.html
+++ b/templates/list.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <div class="board_wrap">
+    <div>
+        <button onclick="history.back()">뒤로가기</button>
+    </div>
     <div class="board_title">
         <strong>{{ board_type.name }}</strong>
         <p>{{ board_type.description }}</p>
