--- a/templates/view.html
+++ b/templates/view.html
@@ -61,6 +61,7 @@
             <div class="bt_wrap">
                 <a href="/main/board/list/{{ board.board_id }}" class="on">목록</a>
                 <a href="edit.html">수정</a>
+                <a href="delete.html" class="on">삭제</a>
             </div>
         </div>
     </div>
