--- a/static/main/security.css
+++ b/static/main/security.css
@@ -70,6 +70,18 @@ button {
     align-items: center;
 }
 
+.div1 {
+  border: 1px solid;
+  width: 100px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-width: thick;
+  background-color:#ffffff;
+  font-weight: bold;
+  color: #000000;
+} 
 .div2 {
   border: 1px solid;
   width: 100px;
@@ -78,11 +90,10 @@ button {
   align-items: center;
   justify-content: center;
   border-width: thick;
-  border-radius: 10px 10px 10px 10px;
   background-color:#ffffff;
   font-weight: bold;
   color: #0f9df5;
-}
+} 
 
 
 #notice .title{
