--- a/templates/graph.html
+++ b/templates/graph.html
@@ -11,25 +11,25 @@
     <div style="padding: 70;"></div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     {%if type == 'gas' %}
-        <button type="button" onclick="location.href='/main/graph/gas/both'" class="btn btn-primary" style="width: 24%; height: 7%; font-size:150%">가스 요금</button>
+        <button type="button" onclick="location.href='/main/graph/gas/{{ time }}'" class="btn btn-primary" style="width: 24%; height: 7%; font-size:150%">가스 요금</button>
         <button type="button" onclick="location.href='/main/graph/water/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">수도 요금</button>
         <button type="button" onclick="location.href='/main/graph/electric/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">전기 요금</button>
         <button type="button" onclick="location.href='/main/graph/waste/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">음식물 쓰레기 요금</button>
     {% elif type == 'water' %}
         <button type="button" onclick="location.href='/main/graph/gas/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">가스 요금</button>
-        <button type="button" onclick="location.href='/main/graph/water/both'" class="btn btn-primary" style="width: 24%; height: 7%; font-size:150%">수도 요금</button>
+        <button type="button" onclick="location.href='/main/graph/water/{{ time }}'" class="btn btn-primary" style="width: 24%; height: 7%; font-size:150%">수도 요금</button>
         <button type="button" onclick="location.href='/main/graph/electric/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">전기 요금</button>
         <button type="button" onclick="location.href='/main/graph/waste/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">음식물 쓰레기 요금</button>
     {% elif type == 'electric' %}
         <button type="button" onclick="location.href='/main/graph/gas/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">가스 요금</button>
         <button type="button" onclick="location.href='/main/graph/water/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">수도 요금</button>
-        <button type="button" onclick="location.href='/main/graph/electric/both'" class="btn btn-primary" style="width: 24%; height: 7%; font-size:150%">전기 요금</button>
+        <button type="button" onclick="location.href='/main/graph/electric/{{ time }}'" class="btn btn-primary" style="width: 24%; height: 7%; font-size:150%">전기 요금</button>
         <button type="button" onclick="location.href='/main/graph/waste/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">음식물 쓰레기 요금</button>
     {% elif type == 'waste' %}
         <button type="button" onclick="location.href='/main/graph/gas/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">가스 요금</button>
         <button type="button" onclick="location.href='/main/graph/water/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">수도 요금</button>
         <button type="button" onclick="location.href='/main/graph/electric/both'" class="btn btn-outline-primary" style="width: 24%; height: 7%; font-size:150%">전기 요금</button>
-        <button type="button" onclick="location.href='/main/graph/waste/both'" class="btn btn-primary" style="width: 24%; height: 7%; font-size:150%">음식물 쓰레기 요금</button>
+        <button type="button" onclick="location.href='/main/graph/waste/{{ time }}'" class="btn btn-primary" style="width: 24%; height: 7%; font-size:150%">음식물 쓰레기 요금</button>
     {% endif %}
 </head>
 <div id = 'container' style="width:100%;">
